--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "iytdl"
-version = "0.1.5"
+version = "0.1.7"
 description = "Asynchronous Standalone Inline YouTube-DL Module"
 authors = ["Leorio Paradinight <62891774+code-rgb@users.noreply.github.com>"]
 homepage = "https://github.com/iytdl/iytdl"
@@ -45,10 +45,10 @@ autoflake = "^1.4"
 
 [tool.isort]
 profile = "black"
-# include_trailing_comma = true
-# lines_after_imports = 2
-# lines_between_types = 1
-# use_parentheses = true
+include_trailing_comma = true
+lines_after_imports = 2
+lines_between_types = 1
+use_parentheses = true
 filter_files = true
 
 [tool.black]
