--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -21,7 +21,7 @@ jobs:
           echo "PROJECT_VERSION=$PROJECT_VERSION" >> $GITHUB_ENV
       - name: Build
         run: |
-          poetry install --no-interactionn
+          poetry install --no-interaction
           poetry build
       - name: Release
         uses: softprops/action-gh-release@v1
