--- a/.github/workflows/pypi-publish.yaml
+++ b/.github/workflows/pypi-publish.yaml
@@ -16,16 +16,16 @@ jobs:
         run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
       - name: Add Poetry to path
         run: echo "${HOME}/.poetry/bin" >> $GITHUB_PATH
-      - name: Add version to environment vars
-        run: |
-          PROJECT_VERSION=$(poetry version --short)
-          echo "PROJECT_VERSION=$PROJECT_VERSION" >> $GITHUB_ENV
-      - name: Check if tag version matches project version
-        run: |
-          TAG=$(git describe HEAD --tags --abbrev=0)
-          echo $TAG
-          echo $PROJECT_VERSION
-          if [[ "$TAG" != "v$PROJECT_VERSION" ]]; then exit 1; fi
+      # - name: Add version to environment vars
+      #   run: |
+      #     PROJECT_VERSION=$(poetry version --short)
+      #     echo "PROJECT_VERSION=$PROJECT_VERSION" >> $GITHUB_ENV
+      # - name: Check if tag version matches project version
+      #   run: |
+      #     TAG=$(git describe HEAD --tags --abbrev=0)
+      #     echo $TAG
+      #     echo $PROJECT_VERSION
+      #     if [[ "$TAG" != "v$PROJECT_VERSION" ]]; then exit 1; fi
       - name: Get Poetry version
         run: poetry --version
       - name: Check pyproject.toml validity
