--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ html-telegraph-poster = "^0.4.0"
 hachoir = "^3.1.2"
 mutagen = "^1.45.1"
 aiosqlite = "^0.17.0"
+aiohttp = "^3.7.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
