--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-  "python.defaultInterpreterPath": "C:\\Users\\himan\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\iytdl-zgTsG-iz-py3.9\r\n",
-  "python.pythonPath": "C:\\Users\\himan\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\iytdl-zgTsG-iz-py3.9\r\n"
+  "python.pythonPath": ""
 }
