--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "iytdl"
-version = "0.5.3"
-description ="Aysnc Inline YouTube-DL for Pyrogram"
+version = "0.5.4"
+description ="Async Inline YouTube-DL for Pyrogram based Bots"
 authors = ["Leorio Paradinight <62891774+code-rgb@users.noreply.github.com>"]
 homepage = "https://github.com/iytdl/iytdl"
 repository = "https://github.com/iytdl/iytdl"
-keywords = ["iytdl", "yt-dlp", "youtube-dl", "pyrogram", "x"]
+keywords = ["iytdl", "yt-dlp", "youtube-dl", "pyrogram"]
 license = "GPLv3"
 readme = "README.md"
 
@@ -27,7 +27,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4"
-youtube-search-python = "1.4.6"
+youtube-search-python = "^1.4.9"
 Pyrogram = "^1.2.9"
 Pillow = "^8.3.1"
 html-telegraph-poster = "^0.4.0"
@@ -35,7 +35,7 @@ hachoir = "^3.1.2"
 mutagen = "^1.45.1"
 aiosqlite = "^0.17.0"
 aiohttp = "^3.7.4"
-yt-dlp = "^2021.9.2"
+yt-dlp = "^2021.9.25"
 TgCrypto = "^1.2.2"
 
 [tool.poetry.dev-dependencies]
