--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "iytdl"
-version = "0.5.6"
+version = "0.5.7"
 description ="Async Inline YouTube-DL for Pyrogram based Bots"
 authors = ["Leorio Paradinight <62891774+code-rgb@users.noreply.github.com>"]
 homepage = "https://github.com/iytdl/iytdl"
@@ -34,7 +34,7 @@ html-telegraph-poster = "^0.4.0"
 hachoir = "^3.1.3"
 mutagen = "^1.45.1"
 aiosqlite = "^0.17.0"
-aiohttp = "^3.7.4"
+aiohttp = ">=3.7.4"
 yt-dlp = "^2022.6.29"
 TgCrypto = "^1.2.3"
 
